[tool.poetry]
name = "pytch-demos"
version = "0.1.0"
description = ""
authors = ["Ben North <ben.north@tcd.ie>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
